--- a/ElectorWalks.css
+++ b/ElectorWalks.css
@@ -7,7 +7,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     font-weight: bold;
     font-size: 100%;
     line-height: 2;
-    position: center;
+    position: fixed;
   }
 
   .maptitle {
