--- a/ElectorWalks.css
+++ b/ElectorWalks.css
@@ -155,7 +155,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
   h1 {
       font-size: 2em;
-      margin:.67em 0
+      margin:.0 0
   }
 
   mark {
