--- a/ElectorWalks.css
+++ b/ElectorWalks.css
@@ -1,8 +1,9 @@
 
 body {font-family: Arial, Helvetica, sans-serif;}
 
-#dashboard {
+dash {
     position: relative;
+    display: inline-block;
     top: 20px;
     left: 20px;
     z-index: 10;
