--- a/ElectorWalks.css
+++ b/ElectorWalks.css
@@ -2,7 +2,7 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 
 dash {
-    position: relative;
+    position: absolute;
     display: inline-block;
     top: 20px;
     left: 20px;
