--- a/ElectorWalks.css
+++ b/ElectorWalks.css
@@ -4,9 +4,11 @@ body {font-family: Arial, Helvetica, sans-serif;}
 dash {
     position: fixed;
     display: inline-block;
-    top: 20px;
+    top: 30px;
     right 50px
     z-index: 10;
+    font-size: 3em;
+
 }
 
 
