--- a/ElectorWalks.css
+++ b/ElectorWalks.css
@@ -62,7 +62,26 @@
 		* html body{
 			padding: 0 230px 100px 0; /* Set the second value to the width of the right column and the third value to the height of the footer */
 		}
-
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+.active, .collapsible:hover {
+  background-color: #ccc;
+}
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
 
 dash {
     position: fixed;
