--- a/ElectorWalks.css
+++ b/ElectorWalks.css
@@ -62,24 +62,24 @@
 		* html body{
 			padding: 0 230px 100px 0; /* Set the second value to the width of the right column and the third value to the height of the footer */
 		}
-.collapsible {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
+
+.collapsible:after {
+  content: '\002B';
+  color: white;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
 }
-.active, .collapsible:hover {
-  background-color: #ccc;
+
+.active:after {
+  content: "\2212";
 }
+
 .content {
   padding: 0 18px;
-  display: none;
+  max-height: 0;
   overflow: hidden;
+  transition: max-height 0.2s ease-out;
   background-color: #f1f1f1;
 }
 
