--- a/ElectorWalks.css
+++ b/ElectorWalks.css
@@ -76,29 +76,32 @@
 }
 
 .content {
-  padding: 0 18px;
+  padding: 0 30px;
+  position: absolute;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
   background-color: #f1f1f1;
 }
 
-dash {
+.dash {
+    background-color: #555;
     position: fixed;
     display: inline-block;
-    color: indigo;
+    color: white;
     font-weight: bold;
-    top: 30px;
-    left 50px
-    padding : 30 30 ;
+    padding : 16px 20px ;
     z-index: 8;
     font-size: 1.5em;
-    background-color: white;
     border-radius: 3px;
     border-color: indigo;
-
+    cursor: pointer;
+    opacity: 0.8;
+    position: absolute;
+    top: 30 px;
+    right: 28px;
+    width: 280px;
 }
-
 
 .mapwardname {
   color: yellow;
@@ -125,8 +128,8 @@ dash {
   border: none;
   cursor: pointer;
   opacity: 0.8;
-  position: fixed;
-  bottom: 23px;
+  position: absolute;
+  bottom: 123px;
   right: 28px;
   width: 280px;
 }
