--- a/ElectorWalks.css
+++ b/ElectorWalks.css
@@ -2,7 +2,7 @@
 		body {
 			margin: 0;
 			padding: 0;
-			overflow: hidden;
+			overflow: auto;
 			height: 100%;
 			max-height: 100%;
 			font-family:Arial, Helvetica, sans-serif;
@@ -24,7 +24,7 @@
 			right: 230px; /* Set this to the width of the nav bar */
 			left: 0;
 			height: 100px;
-			overflow: hidden; /* Disables scrollbars on the header frame. To enable scrollbars, change "hidden" to "scroll" */
+			overflow: auto; /* Disables scrollbars on the header frame. To enable scrollbars, change "hidden" to "scroll" */
 			background: #BCCE98;
 		}
 
