--- a/ElectorWalks.css
+++ b/ElectorWalks.css
@@ -29,6 +29,7 @@
 		}
 
 		#nav {
+      z-index: 8;
 			position: absolute;
 			top: 0;
 			right: 0;
@@ -114,12 +115,12 @@
 .open-button {
   background-color: #555;
   color: white;
-  padding: 16px 20px;
+  padding: 0 0 ;
   border: none;
   cursor: pointer;
   opacity: 0.8;
   position: absolute;
-  bottom: 123px;
+  bottom: 0;
   right: 28px;
   width: 280px;
 }
@@ -184,7 +185,9 @@ table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
-
+  border-spacing:0
+  margin-left: 30px;
+  page-break-inside:auto;
 }
 thead {
    display:table-header-group;
@@ -194,7 +197,6 @@ thead {
 
 tr:nth-child(even) {
   background-color: #dddddd;
-
 }
 
 /*! Guilfoss Design System 1.21 */
@@ -366,11 +368,6 @@ optgroup {
     font-weight:700
 }
 
-table {
-    border-collapse: collapse;
-    border-spacing:0
-    margin-left: 30px;
-}
 
 td, th {
     color: indigo;
@@ -506,9 +503,6 @@ input[type=search] {
     box-sizing:border-box
 }
 
-table {
-    width:100%
-}
 
 caption, td, th {
     text-align:left
