--- a/ElectorWalks.css
+++ b/ElectorWalks.css
@@ -48,8 +48,8 @@
 		    opacity: 0.8;
 		}
     #myForm {
-      position: relative;
-      top: 20px;
+      position: absolute;
+      top: 700px;
 			width: 280px;
     }
 
