--- a/ElectorWalks.css
+++ b/ElectorWalks.css
@@ -429,7 +429,7 @@ html {
 }
 
 
-dl, fieldset, h1, h2, h3, h4, h5, h6, ol, p, ul {
+dl, fieldset, h1, h2, h3, h4, h5, h6, ol, p, {
     margin: 0;
     padding:20 20;
 }
