--- a/ElectorWalks.css
+++ b/ElectorWalks.css
@@ -119,8 +119,8 @@
   opacity: 0.8;
   position: relative;
   bottom: 0;
-  right: 0;
-  width: 280px;
+  right: 40;
+  width: 100px;
 }
 
 /* The popup form - hidden by default */
@@ -241,6 +241,7 @@ dfn {
 
 h1 {
     font-size: 3em;
+    font-weight: bold;
     margin: .67em 0
 }
 
