--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -52,7 +52,7 @@
     <div>
       <button id="Save_the_data" class="SAVE">
         <label class="guil-action_button" for="Save_the_data" >
-          <b>SAVE DATA</b>
+          <a href= {{ datafile }} >SAVE DATA</a>
         </label>
 			</button>
 		</div>
