--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -42,7 +42,7 @@
     <b>Please collect the data below and upload data for area overview.</b>
     </span>
 
-    <span>
+
       <button id="Show_the_Walk_Map">
         <label class="guil-action_button" for="Show_the_Walk_Map"  >
           <a href= {{ mapfile }} >WALKMAP</a>
@@ -52,7 +52,7 @@
 
       <button id="Save_the_data" class="SAVE">
         <label class="guil-action_button" for="Save_the_data" >
-          <a href= {{ datafile }} >SAVE DATA</a>
+          <a href= "#" onclick="download_table_as_csv('canvass-table'); >SAVE DATA</a>
         </label>
 			</button>
 		</div>
