fix save button

--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -52,7 +52,7 @@
 
       <button id="Save_the_data" class="SAVE">
         <label class="guil-action_button" for="Save_the_data" >
-          <a href= "#" onclick="download_table_as_csv('canvass-table'); >SAVE DATA</a>
+          <a href= "#" onclick="download_table_as_csv('canvass-table');" >SAVE DATA</a>
         </label>
 			</button>
 		</div>
