--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-		<title>electtrek canvassing</title>
+		<title>V3.1 electtrek canvassing</title>
 
 	<div id="header">
     <h1>Postal and Non Postal Vote Canvass Cards </h1>
