button onclick statement move

--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -50,9 +50,9 @@
       </button>
 
 
-      <button id="Save_the_data" class="SAVE">
+      <button id="Save_the_data" onclick= "export_table_to_csv('canvass-table')" class="SAVE">
         <label class="guil-action_button" for="Save_the_data" >
-					<a href= "#" onclick= "export_table_to_csv('canvass-table');" >SAVE DATA</a>
+					<a href= "#"  >SAVE DATA</a>
         </label>
 			</button>
 		</div>
