move script to canvasscards1

--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
+<script src={{ url_for('static', filename='electorwalks.js') }} /script>
+
 		<title>V3.3 electtrek canvassing</title>
 
 	<div id="header">
