--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -52,7 +52,7 @@
       </button>
 
 
-      <button id="Save_the_data" class="SAVE" onclick="export_table_to_csv('canvass-table','newdata.html')" >
+      <button id="Save_the_data" class="SAVE" >
         <label class="guil-action_button" for="Save_the_data" >
 					<a href= "#"  >SAVE DATA</a>
         </label>
