put in # in selector

--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -52,9 +52,9 @@
       </button>
 
 
-      <button id="Save_the_data" class="SAVE" >
+      <button id="Save_the_data" >
         <label class="guil-action_button" for="Save_the_data" >
-					<a href= "#"  >SAVE DATA</a>
+					<a>SAVE DATA</a>
         </label>
 			</button>
 		</div>
