--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -50,12 +50,12 @@
         </label>
       </button>
 
+			<button id="save-btn">
+				 <label class="guil-action_button" for="Save_the_data" >
+							<a>SAVE DATA</a>
+		        </label>
+					</button>
 
-      <button id="Save_the_data" >
-        <label class="guil-action_button" for="Save_the_data" >
-					<a>SAVE DATA</a>
-        </label>
-			</button>
 		</div>
 
 
