--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -51,7 +51,7 @@
       </button>
 
 			<button id="save-btn">
-				 <label class="guil-action_button" for="Save_the_data" >
+				 <label class="guil-action_button" for="save-btn" >
 							<a>SAVE DATA</a>
 		        </label>
 					</button>
