--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -76,6 +76,8 @@
 		</form>
 
 	</div>
+	<script type="text/javascript" src="https://newbrie.github.io/Electtrek/static/electorwalks.js">
+	</script>
 	<div id="main" style="page-break-before: always;">
 	    <table id="canvass-table">
 				<thead>
