--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -52,7 +52,7 @@
 
 			<button id="save-btn">
 				 <label class="guil-action_button" for="save-btn" >
-							<a href= {{ walk_name }}-DATA.html >SAVE DATA</a>
+							<a href= {{ walkname }}-DATA.html >SAVE DATA</a>
 		        </label>
 					</button>
 
