--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -50,9 +50,9 @@
         </label>
       </button>
 
-			<button id="save-btn">
+			<button id="save-btn" data1={{ walkname }}-DATA.html >
 				 <label class="guil-action_button" for="save-btn" >
-							<a href= {{ walkname }}-DATA.html >SAVE DATA</a>
+							<p>SAVE DATA</p>
 		        </label>
 					</button>
 
