--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -64,9 +64,9 @@
 	<div class="form-popup" id="myForm">
 	<!--    <form action="/action_page.php" class="form-container">-->
 
-			<form action="mailto:surrey@reformuk.com?subject={{walk_name}}" method="GET" enctype="text/plain">
+			<form action="mailto:surrey@reformuk.com?subject={{walkname}}" method="GET" enctype="text/plain">
 		Subject:<br>
-			<input type="text" name="subject" placeholder="{{walk_name}}"><br>
+			<input type="text" name="subject" placeholder="{{walkname}}"><br>
 			Email:<br>
 			<input type="email" name="sender" placeholder="surrey@reformuk.com"><br>
 			Message:<br>
