--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -52,7 +52,7 @@
 
 			<button id="save-btn" data1={{ walkname }}-DATA.html >
 				 <label class="guil-action_button" for="save-btn" >
-							<p>SAVE DATA</p>
+							<a>SAVE DATA</a>
 		        </label>
 					</button>
 
