--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -50,7 +50,7 @@
         </label>
       </button>
 
-			<button id="save-btn" data1={{ walkname }}-DATA.html >
+			<button id="save-btn" data1={{ walkname }}-DATA.csv >
 				 <label class="guil-action_button" for="save-btn" >
 							<a>SAVE DATA</a>
 		        </label>
