--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -109,10 +109,10 @@
 	        {% endif %}
 	        <td class="righted">{{ row['StreetName'] }}</td>
 	        <td class="righted">{{ row['Postcode'] }}</td>
-					<td class="coded"><span>{{ row['AV'] | replace('nan', '') }}  </span></td>
-	       	<td class="coded"><span> <input type="text" maclength="2" size="2" name={{"example-unique-id-A" ~ row['ENOP']}} id={{"example-unique-id-E" ~ row['ENOP']}} />
+					<td class="AV"><span>{{ row['AV'] | replace('nan', '') }}  </span></td>
+	       	<td class="VI"><span> <input type="text" maclength="2" size="2" name={{"example-unique-id-A" ~ row['ENOP']}} id={{"example-unique-id-E" ~ row['ENOP']}} />
 				    </span></td>
-	        <td class="c11" ><span>
+	        <td class="Ns" ><span>
 						<input type="text" name={{"example-unique-id-A" ~ row['ENOP']}} id={{"example-unique-id-F" ~ row['ENOP']}} />
 	        {{ row['Notes'] }}
 	          </span>
