VI and NS greyed

--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -110,10 +110,10 @@
 	        <td class="righted">{{ row['StreetName'] }}</td>
 	        <td class="righted">{{ row['Postcode'] }}</td>
 					<td class="AV"><span>{{ row['AV'] | replace('nan', '') }}  </span></td>
-	       	<td class="VI"><span> <input type="text" onchange="copyinput(this)" maclength="2" size="2" name={{"example-unique-id-A" ~ row['ENOP']}} id={{"example-unique-id-E" ~ row['ENOP']}} />
+	       	<td class="VI"><span> <input type="text" onchange="inputVI(this.value)" maclength="2" size="2" name={{"example-unique-id-A" ~ row['ENOP']}} id={{"example-unique-id-E" ~ row['ENOP']}} />
 				    </span></td>
 	        <td class="NS" ><span>
-						<input type="text" name={{"example-unique-id-A" ~ row['ENOP']}} id={{"example-unique-id-F" ~ row['ENOP']}} />
+						<input type="text" onchange="inputNS(this.value)" name={{"example-unique-id-A" ~ row['ENOP']}} id={{"example-unique-id-F" ~ row['ENOP']}} />
 	        {{ row['Notes'] }}
 	          </span>
 	        </td>
