--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -79,10 +79,10 @@
 	<div id="main" style="page-break-before: always;">
 	    <table id="canvass-table">
 				<thead>
-					<tr><th colspan='10' style='font-weight: bold;font-size: 9pt;text-align: center;border-left: 0px;border-right: 0px;border-top: 0px;'> I am calling on behalf of {{ prodstats['candfirst'] }} {{ prodstats['candsurn'] }}, your Reform candidate in the {{ prodstats['constituency'] }}
+					<textarea><th colspan='10' style='font-weight: bold;font-size: 9pt;text-align: center;border-left: 0px;border-right: 0px;border-top: 0px;'> I am calling on behalf of {{ prodstats['candfirst'] }} {{ prodstats['candsurn'] }}, your Reform candidate in the {{ prodstats['constituency'] }}
  			 		constituency by-election on {{ prodstats['electiondate'] }}. Did you support Reform in the General Election, and will you support {{ prodstats['candfirst'] }}? <br>
  			 		PLEASE DO NOT SAY “I’m sorry to bother you”.</th>
-				 </tr>
+				 </textarea>
 	      <tr>
 	      <th class="c1" colspan='3' >Elector</th>
 				<th class="centred" colspan='3'>Address</th>
